<resources>
    <string name="app_name">DrinkingGame</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="date_of_birth">Date of Birth</string>
</resources>